[package]
name = "dotodo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
color-eyre = "0.6.3"
ratatui = { version = "0.28.0", features = ["all-widgets"] }
serde = { version = "1.0.206", features = ["derive", "serde_derive"] }
serde_json = "1.0.122"
